2008-11-20  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	  Noticed that all auxbus machines fail. Also updated list off missing
	  dll entries.

	* dllwrapper1/wine/registry.c:
	* dllwrapper1/wine/win32.c:
	  Fixing compiler warnings. Notes about how to get from a dll ordinal to
	  a function name.

	* src/BuzzMachineLoader/BuzzMachineCallbacks.cpp:
	* src/BuzzMachineLoader/BuzzMachineLoader.cpp:
	* src/BuzzMachineLoader/CMachine.h:
	  Try to implement one more callback api.

	* src/bml.c:
	* src/bmltest_process.c:
	  Compiler warnings.

	* tests/testmachine.sh:
	  Log used dll's

2008-11-19  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	  Update info of failing machines.

	* dllwrapper1/wine/win32.c:
	  Replace some fixed values by defines and adjust ranges.

	* src/BuzzMachineLoader.dll:
	  Recompiled binary.

	* src/bmltest_info.c:
	* src/bmltest_process.c:
	* tests/testmachine.sh:
	  Switch to unbuffered output for better testability. Reactivate logging
	  in testmachine script.

2008-11-17  Stefan Kost  <ensonic@users.sf.net>

	* dllwrapper1/wine/win32.c:
	  Implement _control87. Seems to fix dsplib based machines.

2008-11-16  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader/BuzzMachineCallbacks.h:
	* src/BuzzMachineLoader/BuzzMachineCallbacksPre12.h:
	* src/BuzzMachineLoader/BuzzMachineLoader.cpp:
	  Call machine destructor and fix freeing mdkimpl twice.

2008-11-11  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader.dll:
	  New win32 binary. Better mdk support.

2008-11-11  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader/BuzzMachineLoader.cpp:
	* src/BuzzMachineLoader/mdkimp.cpp:
	  Look at CMachineInterfaceEx * before checking mdkimpl.

2008-11-10  Stefan Kost  <ensonic@users.sf.net>


	* src/BuzzMachineLoader/BuzzMDKHelper.cpp:
	* src/BuzzMachineLoader/BuzzMDKHelper.h:
	* src/BuzzMachineLoader/BuzzMachineCallbacks.cpp:
	* src/BuzzMachineLoader/BuzzMachineCallbacksPre12.cpp: