@@ -165,6 +165,7 @@ Jeskola XDelay (causes distortions)
 Jeskola Raverb (causes distortions)
   BuzzMachineCallbacks::GetEnvSize (wave=-96185375,env=0)
   buzzmachinecallbackspre12.cpp:112:BuzzMachineCallbacksPre12::GetOscillatorTable (waveform=-128840458)
+Jeskola Stereo Reverb (sometimes silences the whole song, NAN?)
 Sonic Verb (seems to work now)
   buzzmachinecallbacks.cpp:199:BuzzMachineCallbacks::GetEnvPoint (wave=-1,env=-1,i=-1076278224,&x,&y,&flags)
   buzzmachinecallbacks.cpp:276:BuzzMachineCallbacks::SetSequenceData (row=-1217504548,ppat=B7A5B3C4)
