@@ -1,3 +1,9 @@
+2008-11-21  Stefan Kost  <ensonic@users.sf.net>
+
+	* TODO:
+	* tests/testmachine.sh:
+	  More ideas and handle extensions.
+
 2008-11-20  Stefan Kost  <ensonic@users.sf.net>
 
 	* TODO:
